--- a/application/index/view/Layouts/header.html
+++ b/application/index/view/Layouts/header.html
@@ -46,7 +46,11 @@
     <!-- 顶部通用栏 二 -->
         <div class="header-wrapper">
             <div class="header-index">
-                <a href="/" class="header-index-img lt" ><img src="/static/images/logo.png" alt="重庆MBA院校信息发布和咨询平台" title="重庆MBA院校信息发布和咨询平台"></a>
+                <div class="header-index-img lt">
+                    <a href="/"  >
+                    <img src="/static/images/logo.png" alt="重庆MBA院校信息发布和咨询平台" title="重庆MBA院校信息发布和咨询平台">
+                </a>
+                </div>
                 <div class="header-index-ad  lt">
                     <img src="/static/images/banner.png">
                 </div>
