--- a/application/index/view/Layouts/right_aside.html
+++ b/application/index/view/Layouts/right_aside.html
@@ -7,7 +7,7 @@
 		<div class="row ">
 			<div class="oneBox_right col-md-12">
 					<!-- 招考广告 -->
-					<div class="col-md-12">
+					<div class="col-md-12 pad0">
 						<div class="oneBox_title">
 							<span class="oneBox_title_bd">招考公告</span>
 							<a href="#" class="rt">更多></a>
@@ -15,40 +15,35 @@
 						<div class="oneBox_body">
 							<div class="oneBox_body_list">
 								<div class="yd">·</div>
-								<div class="oneBox_body_list_bd"><a href="#">重庆地质大学(武汉)2018年接收推免生章程</a></div>
+								<div class="oneBox_body_list_bd"><a href="#">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学</a></div>
 							</div>
 							<div class="oneBox_body_list">
 								<div class="yd">·</div>
-								<div class="oneBox_body_list_bd"><a href="#">重庆地质大学(武汉)2018年接收推免生章程</a></div>
+								<div class="oneBox_body_list_bd"><a href="#">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学</a></div>
 							</div>
 							<div class="oneBox_body_list">
 								<div class="yd">·</div>
-								<div class="oneBox_body_list_bd"><a href="#">重庆地质大学(武汉)2018年接收推免生章程</a></div>
+								<div class="oneBox_body_list_bd"><a href="#">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学</a></div>
 							</div>
 							<div class="oneBox_body_list">
 								<div class="yd">·</div>
-								<div class="oneBox_body_list_bd"><a href="#">重庆地质大学(武汉)2018年接收推免生章程</a></div>
+								<div class="oneBox_body_list_bd"><a href="#">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学</a></div>
 							</div>
 						</div>
 					</div>
 					<!-- 广告位 -->
+					
+			</div>
+			<div class="col-md-12 oneBox_right pad0">
 					<div class="col-md-12">
+						<div class="oneBox_title">
+							<span class="oneBox_title_bd">请扫描下方二维码</span>
+						</div>
+						<div class="h10"></div>
 						<div class="oneBox_top_ad">
 							<img src="/static/images/icon.png">
 						</div>
-					</div>
-			</div>	
-		</div>
-		
-
-		<!-- 2L-右  -->
-		<div class="row oneBox">
-			<div class="col-md-12 oneBox_right">
-					<div class="col-md-12">
-						<div class="oneBox_title">
-						<span class="oneBox_title_bd">请扫描下方二维码</span>
-					</div>
-					<div class="h10"></div>
+						<div class="h10"></div>
 					</div>
 					<!-- 手机站(二维码/域名) -->
 					<div class="col-md-12">
@@ -65,7 +60,7 @@
 							</div>
 							<div class="lt second_phone_img"><img src="/static/images/wx.png" alt="公众号二维码" title="公众号二维码"></div>
 					</div>
-					<div class="h16"></div>
+					<div class="h24"></div>
 					<!-- 院校推荐 -->
 					<div class="col-md-12">
 						<div class="oneBox_title">
@@ -104,9 +99,11 @@
 						</div>
 
 					</div>
-		</div>
+			</div>
 		</div>
 		
+
+
 	</div>
 		
 </div>
