--- a/application/weapp/view/Layouts/footer.html
+++ b/application/weapp/view/Layouts/footer.html
@@ -3,17 +3,21 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
+<div class="weui-footer">
+  <p class="weui-footer__links">
+    <a href="javascript:void(0);" class="weui-footer__link">网站地图</a> 
+    <a href="javascript:void(0);" class="weui-footer__link">关于我们</a> 
+    <a href="javascript:void(0);" class="weui-footer__link">连续我们</a>
+  </p>
+  <p class="weui-footer__text">Copyright © 2008-2016 weui.io</p>
+</div>
+<div class="h20"></div>
+<!-- 固定底部 -->
+<div class="sub_footer">
+    <a href="javascript:;" class="weui-tabbar__item weui-bar__item--on">在线咨询</a>
+    <a href="javascript:;" class="weui-tabbar__item">拨打电话</a>
+    <a href="javascript:;" class="weui-tabbar__item">返回首页</a>
+</div>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -25,8 +29,7 @@
     {js href="/static/bootstrapvalidator/dist/js/language/zh_CN.js" /}
     <!-- sweetalert弹窗插件 -->
     {js href="/static/sweetalert2/dist/sweetalert2.min.js" /}
-    <!-- header/fooyer js -->
-    {js href="/static/index/layouts/js/layouts.js" /}
+    
     <!-- jQuery WEUI -->
     <script src="//cdn.bootcss.com/jquery-weui/1.0.1/js/jquery-weui.min.js"></script>
     <script src="//cdn.bootcss.com/jquery-weui/1.0.1/js/swiper.min.js"></script>
@@ -34,6 +37,7 @@
 
     <!-- jQueryForm -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js" integrity="sha384-FzT3vTVGXqf7wRfy8k4BiyzvbNfeYjK+frTVqZeNDFl8woCbF0CYG6g2fMEFFo/i" crossorigin="anonymous"></script>
-
+    <!-- header/fooyer js -->
+    {js href="/static/weapp/layouts/js/layouts.js" /}
   </body>
 </html>
