--- a/application/index/view/Layouts/header.html
+++ b/application/index/view/Layouts/header.html
@@ -38,7 +38,7 @@
                 <a href="#" target="_blank">重庆MBA院校信息发布平台</a>
             </div>
             <div class="top-list textR">
-                <a href="/Websitewap/websitewap">院校登陆</a>
+                <a href="/websitewap/websitewap">院校登陆</a>
                 <a href="#" id="favorites">加入收藏</a>
             </div>
         </div>
@@ -66,7 +66,7 @@
             <ul class="nav-box">
                 <li class="nav-first">
                     <div class="nav-title">
-                        <a href="/Message/message">首页</a>
+                        <a href="/message/message">首页</a>
                     </div>
                 </li>
                 <li class="nav-second">
