--- a/application/admin/view/Index/index.html
+++ b/application/admin/view/Index/index.html
@@ -1,6 +1,6 @@
-{include file="Layouts/header" /}
-{include file="Layouts/nav" /}
-{include file="Layouts/menu" /}
+{include file="layouts/header" /}
+{include file="layouts/nav" /}
+{include file="layouts/menu" /}
 
 <!-- Page -->
 <div class="page animsition">
@@ -155,4 +155,4 @@
 </div>
 <!-- End Page -->
 
-{include file="Layouts/footer" /}
+{include file="layouts/footer" /}
