--- a/application/index/view/Layouts/header.html
+++ b/application/index/view/Layouts/header.html
@@ -32,14 +32,14 @@
     <div class="top-nav-wrapper">
         <div class="top-nav-index">
             <div class="top-list top-list_left">
-                <a href="#" target="_blank">重庆MBA招生考试服务平台</a>
-                <a href="#" target="_blank">务平台</a>
-                <a href="#" target="_blank">重庆MBA招生考</a>
-                <a href="#" target="_blank">重庆MBA院校信息发布平台</a>
+                <a href="#" target="_blank" title="#">重庆MBA招生考试服务平台</a>
+                <a href="#" target="_blank" title="#">务平台</a>
+                <a href="#" target="_blank" title="#">重庆MBA招生考</a>
+                <a href="#" target="_blank" title="#">重庆MBA院校信息发布平台</a>
             </div>
             <div class="top-list textR">
-                <a href="/websitewap/websitewap">院校登陆</a>
-                <a href="#" id="favorites">加入收藏</a>
+                <a href="/websitewap/websitewap" title="#">院校登陆</a>
+                <a href="#" id="favorites" title="#">加入收藏</a>
             </div>
         </div>
     </div>
@@ -52,7 +52,7 @@
                 </a>
                 </div>
                 <div class="header-index-ad  lt">
-                    <img src="/static/images/banner.png">
+                    <img src="/static/images/banner.png" alt="重庆MBA院校信息发布和咨询平台" title="重庆MBA院校信息发布和咨询平台">
                 </div>
                 <!-- 搜索框 -->
                 <div class="header-index-search lt">
@@ -62,7 +62,7 @@
             </div>
         </div>
     <!-- 顶部通用栏 三 -->
-        <div class="header-nav-box">
+        <nav class="header-nav-box">
             <ul class="nav-box">
                 <li class="nav-first">
                     <div class="nav-title">
@@ -71,21 +71,26 @@
                 </li>
                 <li class="nav-second">
                     <div class="nav-title">招生</div>
-                    <ul class="nav-td">
-                        <li><a href="#">招生咨询</a></li>
-                        <li><a href="#">考试咨询</a></li>
-                        <li><a href="#">热点公告</a></li>
-                        <li><a href="#">招考公告</a></li>
-                        <li><a href="#">招生咨询</a></li>
-                        <li><a href="#">考试咨询</a></li>
-                        <li><a href="#">热点公告</a></li>
-                        <li><a href="#">招考公告</a></li>
-                        <li><a href="#">招生咨询</a></li>
-                    </ul>
+                        <ul class="nav-td">
+                                <li><a href="#">考试咨询</a></li>
+                                <li><a href="#">热点公告</a></li>
+                                <li><a href="#">招考公告</a></li>
+                                <li><a href="#">招生咨询</a></li>
+                                <li><a href="#">考试咨询</a></li>
+                                <li><a href="#">热点公告</a></li>
+                                <li><a href="#">招考公告</a></li>
+                                <li><a href="#">招生咨询</a></li>
+                        </ul>
                 </li>
                 <li class="nav-third">
                     <div class="nav-title">院校</div>
                     <ul class="nav-td">
+                        <!-- {if condition="($data.status == 0)"}
+                            {foreach name="data.data.programa2"  item="v" key="k"}
+                                <li><a href="#">{$v.cname}</a></li>
+                            {/foreach}
+                        {/if} -->
+
                         <li><a href="#">重庆大学</a></li>
                         <li><a href="#">重庆工商大学</a></li>
                         <li><a href="#">重庆师范大学</a></li>
@@ -107,6 +112,11 @@
                 <li class="nav-fourth">
                     <div class="nav-title">考试</div>
                     <ul class="nav-td">
+                        <!-- {if condition="($data.status == 0)"}
+                            {foreach name="data.data.programa3"  item="v" key="k"}
+                                <li><a href="#">{$v.cname}</a></li>
+                            {/foreach}
+                        {/if} -->
                         <li><a href="#">初试</a></li>
                         <li><a href="#">复试</a></li>
                         <li><a href="#">英语</a></li>
@@ -123,9 +133,7 @@
                 </li>
             </ul>
             
-        </div>
+        </nav>
     
 </div>
 
-<!-- header/fooyer js -->
-    {js href="/static/index/layouts/js/layouts.js" /}
