--- a/application/index/view/Message/message.html
+++ b/application/index/view/Message/message.html
@@ -11,22 +11,28 @@
 		
 	<!-- 左边列表样式 -->
 	<div class="left_aside lt">
-		<div class="item_bd">
+		<div class="item_bd" id="items_list">
+			{if condition="($data.status == 0)"}
+			{foreach name="data.item" item="v" key="k"}
 			<div class="item_list">
 				<div class="item_list_img lt">
 					<img src="/static/images/banner.png">
 				</div>
 				<div class="item_list_con rt">
-					<h3><a href="#">中国地质大学(武汉)2018年接收推免生章程</a></h3>
+					<h3><a href="#">{$v.title}</a></h3>
 					<p>
-						<a href="#">为做好接收2018年推免生工作，加强科学选拔，规范工作程序，保证公平公正，根据教育部有关推免生工作管理办法，结合我校实际，制定本章程。<br>一、接收专业、人数及学制1. 2018年我校在理、工、文、管、经、法、教、哲、艺9个学科门类的51个学术学位专业和资产评估、法律、翻译、工程、艺术、体育6个专业学位类别。</a>
+						<a href="#">{$v.content}<br>一、接收专业、人数及学制1. 2018年我校在理、工、文、管、经、法、教、哲、艺9个学科门类的51个学术学位专业和资产评估、法律、翻译、工程、艺术、体育6个专业学位类别。</a>
 					</p>
 					<p class="item_list_con_time">
-						<span>发布时间 ： 2017-09-06 16:14:02</span>
+						<span>发布时间 ： {$v.title}</span>
 					</p>
 				</div>
 			</div>
-			<div class="item_list">
+			{/foreach}
+			{else /}
+				数据异常~
+			{/if}
+			<!-- <div class="item_list">
 				<div class="item_list_img lt">
 					<img src="/static/images/banner.png">
 				</div>
@@ -53,6 +59,17 @@
 						<span>发布时间 ： 2017-09-06 16:14:02</span>
 					</p>
 				</div>
+			</div> -->
+			<div class="liem_bd textC ">
+				<ul class="pagination">
+				    <li><a href="#">&laquo;</a></li>
+				    <li class="active"><a href="#">1</a></li>
+				    <li class="disabled"><a href="#">2</a></li>
+				    <li><a href="#">3</a></li>
+				    <li><a href="#">4</a></li>
+				    <li><a href="#">5</a></li>
+				    <li><a href="#">&raquo;</a></li>
+				</ul>
 			</div>
 		</div>
 	</div>
@@ -61,3 +78,5 @@
 </div>
 
 {include file="layouts/footer" /}
+
+{js href="/static/index/message/js/message.js" /}
