--- a/application/index/view/Websitewap/websitewap.html
+++ b/application/index/view/Websitewap/websitewap.html
@@ -10,44 +10,29 @@
 <div class="container">
 		
 	<!-- 左边列表样式 -->
-	<div class="left_aside lt">
-		<div class="article_bd">
+	<div class="left_aside lt" >
+		<div class="article_bd" id="returnMsg">
 			<h1>欢迎报考厦门理工学院硕士研究生</h1>
 			<div class="title-box">
 				<span class="newTime">2017年06月30日</span>
 				<span class="newfrom">来源：厦门理工学院 </span>
 			</div>
 			<div class="content">
-				<!-- 主体内容区域 -->
 				<p>三、就业升学
-
-毕业生竞争力强，近三年毕业生的就业率均为100%。我校毕业的研究生以“实践能力强和职业素养高”的特点深受用人单位青睐，联合培养的企业以优厚的待遇招聘毕业生，超过92%的毕业生入职相关企事业单位从事研发工程师或技术工程师工作。2017年，共6名研究生考取浙江大学、西安交通大学、中山大学、武汉大学等高校博士生。
-
-四、奖励政策
-
-全日制、非全日制专业学位硕士研究生享受同等奖助政策,在研期间，每生奖助学金5.65-12.3万(不含单项奖学金):
-
-1.研究生入学奖学金：录取时成绩优异的学生可获企业入学奖学金，一等奖6000元，二等奖3000元，三等奖2000元。
-
-2.学业奖学金：第一年学业奖学金6000-10000元/人。二年级起学业奖学金5000-8000元/人，全覆盖。
-
-3.研究生还可以申请国家奖学金、企业奖学金、单项奖学金等
-
-4.国家助学金：每年6000元/人，全覆盖。
-
-5.此外，学生还可以申请“三助”津贴，享受导师津贴、见习工资等。
-
-五、联系方式
-
-研究生学院网站：http://yjs.xmut.edu.cn
-
-邮箱： yjsb@xmut.edu.cn
-
-研究生招生工作办公室电话：0592-6291820/6291269许老师、林老师
-
-厦理工研究生招生咨询QQ群：428196215</p>
+				毕业生竞争力强，近三年毕业生的就业率均为100%。我校毕业的研究生以“实践能力强和职业素养高”的特点深受用人单位青睐，联合培养的企业以优厚的待遇招聘毕业生，超过92%的毕业生入职相关企事业单位从事研发工程师或技术工程师工作。2017年，共6名研究生考取浙江大学、西安交通大学、中山大学、武汉大学等高校博士生。
+				四、奖励政策
+				全日制、非全日制专业学位硕士研究生享受同等奖助政策,在研期间，每生奖助学金5.65-12.3万(不含单项奖学金):
+				1.研究生入学奖学金：录取时成绩优异的学生可获企业入学奖学金，一等奖6000元，二等奖3000元，三等奖2000元。
+				2.学业奖学金：第一年学业奖学金6000-10000元/人。二年级起学业奖学金5000-8000元/人，全覆盖。
+				3.研究生还可以申请国家奖学金、企业奖学金、单项奖学金等
+				4.国家助学金：每年6000元/人，全覆盖。
+				5.此外，学生还可以申请“三助”津贴，享受导师津贴、见习工资等。
+				五、联系方式
+				研究生学院网站：http://yjs.xmut.edu.cn
+				邮箱： yjsb@xmut.edu.cn
+				研究生招生工作办公室电话：0592-6291820/6291269许老师、林老师
+				厦理工研究生招生咨询QQ群：428196215</p>
 			</div>
-			
 		</div>
 	</div>
 	<!-- 引入公共右部样式 -->
