--- a/public/static/index/index/css/index.css
+++ b/public/static/index/index/css/index.css
@@ -1,6 +1,9 @@
 body{
 	font-family: 'Microsoft YaHei';
 }
+h1,h2,h3{
+	margin-top: 0;
+}
 .left_aside{width: 870px;}
 .h10{display: block;width: 100%;height: 10px;font-size: 0;clear: both;}
 .h20{display: block;width: 100%;height: 20px;font-size: 0;clear: both;}
@@ -40,12 +43,6 @@ body{
 .img3 img{width: 242px;height: 80px;margin:20px 0 0 10px; }
 
 
-.third_header{width: 100%;height: 48px;border-bottom: 1px solid  #e5e5e5;}
-.third_header h3{float: left;display: inline-block;padding: 9px 0 11px;font-size: 24px;font-weight: 400;
-	border-bottom: 3px solid #1787e0;margin: 0;}
-.third_header .third_header_aside{height: 48px;float: right;width: 600px;margin: 0 auto;background-color: #f5f5f5;text-align: center;}
-.third_header .third_header_aside ul li{display: inline-block;float: left;width: 200px;height: 24px;
-	line-height: 24px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
 
 
 .panel_bd .panel_tltle{font-weight: bold;font-size: 17px;width: auto;overflow: hidden;text-overflow: ellipsis;
@@ -55,7 +52,20 @@ body{
 .oneBox_body_list_access .weui-media-box__desc{font-size: 16px;color: #333;line-height: 26px;}
 .oneBox_body_list_access .weui-media-box{padding:7px 15px;}
 
-.third_header_aside_banner{width: 600px;height: 48px;float: right;}
+
+
+.third_header{width: 100%;height: 48px;border-bottom: 1px solid  #e5e5e5;}
+.third_header h3{float: left;display: inline-block;padding: 9px 0 11px;font-size: 24px;font-weight: 400;
+	border-bottom: 3px solid #1787e0;margin: 0;}
+.third_header .third_header_aside ul li{display: inline-block;float: left;width: 200px;height: 24px;
+	line-height: 24px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
+
+.third_header_aside_banner{height: 48px;float: right;position: relative;overflow: hidden;}
+
+
+.third_header_aside_banner .third_header_aside_banner_bd{width: 600px;float: left;}
+.third_header .third_header_aside{height: 48px;float: right;margin: 0 auto;background-color: #f5f5f5;text-align: center;}
 .third_header_aside_banner .carousel-control{width: 20px;line-height: 48px;}
 .third_header_aside_banner .carousel-control.left{background-color: #B7B8B8;}
 .third_header_aside_banner .carousel-control.right{background-color: #B7B8B8;}
+.third_header_aside{width: 600px;height: 48px;overflow: hidden;}
