--- a/public/static/index/layouts/css/layouts.css
+++ b/public/static/index/layouts/css/layouts.css
@@ -38,7 +38,7 @@ img{width: 100%;height: 100%;}
 .header-index-search .search_btn i{color: #fff;font-size: 22px;position: absolute;left: 30%;top:25%;}
 
 .header-nav-box{width: 100%;background-color: #1787e0;}
-.header-nav-box .nav-box{width: 1220px;min-height: 106px;margin: 0 auto;}
+.header-nav-box .nav-box{width: 1220px;min-height: 106px;margin: 0 auto; overflow: hidden;}
 
 .nav-box li{float: left;color: #fff;}
 
@@ -66,9 +66,12 @@ img{width: 100%;height: 100%;}
 .footer_link_hd{background: url(/static/images/icon.png)no-repeat;width:150px; height: 45px;}
 .footer_link_hd_span{ border-left: 2px solid #fff;font-size: 20px;font-weight: 600;padding-left:15px;line-height: 45px;
 		margin-left: 15px;color: #fff;}
-.main_footer_bottom{text-align: center;padding-top: 20px;border-top: 2px solid #e5e5e5;}
+.main_footer_bottom{text-align: center;padding-top: 20px;}
 .main_footer_bottom p a{padding: 5px 10px;}
 .footer_link p a{;line-height: 25px;font-size: 14px;}
+.third_header{border-bottom: 2px solid #f5f5f5;width: 100%;height: 48px;}
+.third_header h3{float: left;display:block;padding: 9px 0 11px;font-size: 24px;font-weight: 400;
+	border-bottom: 3px solid #1787e0;margin: 0;}
 		/***************尾部样式  start  *********************/
 
 /*主体宽度*/
