--- a/public/static/index/message/css/message.css
+++ b/public/static/index/message/css/message.css
@@ -7,3 +7,4 @@
 .item_list .item_list_img img{width: 140px;height:160px;}
 .item_list .item_list_con{width: 78%;margin-left: 20px;}
 .item_list_con_time{color: #999;}
+.textC{text-align: center;}
