--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -43,7 +43,7 @@
 			</div>
 			<!-- 幻灯片 -->
 			<div class="oneBox_center col-md-6">
-				<img src="/static/images/banner.png">
+				<img src="/static/images/banner.png" title="#" alt="#">
 			</div>
 			
 		</div>
@@ -542,8 +542,8 @@
 		<div class="h10"></div>
 		<div class="col-md-12">
 			<div class="img2">
-				<img src="/static/images/ad2.png" class="lt">
-				<img src="/static/images/ad1.png" class="lt">
+				<img src="/static/images/ad2.png" class="lt" alt="#" title="#">
+				<img src="/static/images/ad1.png" class="lt" alt="#" title="#">
 			</div>
 		</div>
 		<div class="h10"></div>
