--- a/application/index/view/Layouts/footer.html
+++ b/application/index/view/Layouts/footer.html
@@ -1,8 +1,7 @@
 
     <!--  底部样式开始  -->
 <div class="footer">
-    <div class="container">
-        <!-- 友情链接  -->
+    <!-- 友情链接  -->
         <div class="footer_link">
             <div class="third_header">
                     <h3 >考试咨询</h3>
@@ -22,8 +21,10 @@
                 </p>
             </div>
         </div>
-        <!-- 底部链接 -->
-        <div class="container main_footer_bottom">
+
+    <div class="container">
+                <!-- 底部链接 -->
+        <div class="main_footer_bottom">
             <p>
                 <a href="#">重庆大学MBA</a>-
                 <a href="#">重庆工商大学MBA</a>-
