--- a/application/index/view/Layouts/footer.html
+++ b/application/index/view/Layouts/footer.html
@@ -2,6 +2,7 @@
     <!--  底部样式开始  -->
 <div class="footer">
     <!-- 友情链接  -->
+    <div class="row">
         <div class="footer_link">
             <div class="third_header">
                     <h3 >考试咨询</h3>
@@ -21,7 +22,7 @@
                 </p>
             </div>
         </div>
-
+    </div>
     <div class="container">
                 <!-- 底部链接 -->
         <div class="main_footer_bottom">
