--- a/application/admin/view/Layouts/footer.html
+++ b/application/admin/view/Layouts/footer.html
@@ -43,6 +43,10 @@
   {js href="/static/bootstrapvalidator/dist/js/language/zh_CN.js" /}
   <!-- sweetalert弹窗插件 -->
   {js href="/static/sweetalert2/dist/sweetalert2.min.js" /}
+  <!-- 引入bootstrap-fileinput -->
+  {js href="/static/bootstrap-fileinput/js/fileinput.js" /}
+  {js href="/static/bootstrap-fileinput/js/locales/zh.js" /}
+  {js href="/static/bootstrap-fileinput/themes/fa/theme.js" /}
 
   <!-- jQueryForm -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js" integrity="sha384-FzT3vTVGXqf7wRfy8k4BiyzvbNfeYjK+frTVqZeNDFl8woCbF0CYG6g2fMEFFo/i" crossorigin="anonymous"></script>
