--- a/application/admin/view/Layouts/header.html
+++ b/application/admin/view/Layouts/header.html
@@ -37,6 +37,8 @@
   {css href="/static/bootstrapvalidator/dist/css/bootstrapValidator.css" /}
   <!-- sweetalert弹窗插件 -->
   {css href="/static/sweetalert2/dist/sweetalert2.min.css" /}
+  <!-- 引入bootstrap-fileinput -->
+  {css href="/static/bootstrap-fileinput/css/fileinput.css" /}
 
   <!--[if lt IE 9]>
     <script src="/static/assets/vendor/html5shiv/html5shiv.min.js"></script>
