--- a/application/admin/view/programa_article/add.html
+++ b/application/admin/view/programa_article/add.html
@@ -13,7 +13,7 @@
         <h3 class="panel-title">@ 发布栏目文章 -> {$data.pData.cname}</h3>
       </div>
       <div class="panel-body">
-        <form class="form-horizontal" id="ProgramaArticleForm" action="/admin/ProgramaArticle/add?id={$id}&pid={$pid}&type={$type}">
+        <form class="form-horizontal" id="ProgramaArticleForm" action="/admin/ProgramaArticle/add?id={$id}&pid={$pid}&type={$type}" method="post">
           <div class="form-group">
             <label class="col-sm-2 control-label">标题</label>
             <div class="col-sm-10">
