--- a/application/admin/view/Layouts/menu.html
+++ b/application/admin/view/Layouts/menu.html
@@ -352,6 +352,21 @@
                 </li>
               </ul>
             </li>
+            <li class="site-menu-item has-sub active open">
+              <a href="javascript:void(0)" data-slug="layout">
+                <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
+                <span class="site-menu-title">站点管理</span>
+                <span class="site-menu-arrow"></span>
+              </a>
+              <ul class="site-menu-sub">
+                <li class="site-menu-item">
+                  <a class="animsition-link" href="/admin/Website/add" data-slug="layout-menu-collapsed">
+                    <i class="site-menu-icon " aria-hidden="true"></i>
+                    <span class="site-menu-title">配置站点</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
