--- a/application/admin/view/programa/add.html
+++ b/application/admin/view/programa/add.html
@@ -53,6 +53,12 @@
             <label class="radio-inline">
               <input type="radio" name="type" value="6" {if condition="($data && $data.type == 6)"}checked="checked"{else /}disabled="disabled"{/if}> 院校推荐
             </label>
+            <label class="radio-inline">
+              <input type="radio" name="type" value="7" {if condition="($data && $data.type == 7)"}checked="checked"{else /}disabled="disabled"{/if}> 招生资讯
+            </label>
+            <label class="radio-inline">
+              <input type="radio" name="type" value="8" {if condition="($data && $data.type == 8)"}checked="checked"{else /}disabled="disabled"{/if}> 考试资讯
+            </label>
           </div>
         </div>
         <div class="form-group">
@@ -99,6 +105,12 @@
             </label>
             <label class="radio-inline">
               <input type="radio" name="type" value="6" {if condition="($data && $data.type == 6)"}checked="checked"{/if}> 院校推荐
+            </label>
+            <label class="radio-inline">
+              <input type="radio" name="type" value="7" {if condition="($data && $data.type == 7)"}checked="checked"{/if}> 招生资讯
+            </label>
+            <label class="radio-inline">
+              <input type="radio" name="type" value="8" {if condition="($data && $data.type == 8)"}checked="checked"{/if}> 考试资讯
             </label>
           </div>
         </div>
