--- a/application/admin/view/programa/index.html
+++ b/application/admin/view/programa/index.html
@@ -45,6 +45,8 @@
                  {eq name="$v.type" value="4"}<span class="text-info">{招考公告}</span>{/eq}
                  {eq name="$v.type" value="5"}<span class="text-info">{活动预告}</span>{/eq}
                  {eq name="$v.type" value="6"}<span class="text-info">{院校推荐}</span>{/eq}
+                 {eq name="$v.type" value="7"}<span class="text-info">{招生资讯}</span>{/eq}
+                 {eq name="$v.type" value="8"}<span class="text-info">{考试资讯}</span>{/eq}
                </td>
                <td>{$v.ctime|date="Y-m-d H:i",###}</td>
                <td>
