--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -14,36 +14,49 @@
 					<a href="#" class="rt">更多></a>
 				</div>
 				<div class="oneBox_body">
+					{if $data.hotData}
+						{foreach name="data.hotData" item="v" key="k"}
 					<div class="oneBox_body_list">
 						<div class="yd">·</div>
-						<div class="oneBox_body_list_bd"><a href="#">重庆地质大学(武汉)2018年接收推免生章程</a></div>
+						<div class="oneBox_body_list_bd"><a href="#">{$v.title}</a></div>
 					</div>
-					<div class="oneBox_body_list">
-						<div class="yd">·</div>
-						<div class="oneBox_body_list_bd"><a href="#">重庆地质大学(武汉)2018年接收推免生章程</a></div>
-					</div>
-					<div class="oneBox_body_list">
-						<div class="yd">·</div>
-						<div class="oneBox_body_list_bd"><a href="#">重庆地质大学(武汉)2018年接收推免生章程</a></div>
-					</div>
-					<div class="oneBox_body_list">
-						<div class="yd">·</div>
-						<div class="oneBox_body_list_bd"><a href="#">重庆地质大学(武汉)2018年接收推免生章程</a></div>
-					</div>
-					<div class="oneBox_body_list">
-						<div class="yd">·</div>
-						<div class="oneBox_body_list_bd"><a href="#">重庆地质大学(武汉)2018年接收推免生章程</a></div>
-					</div>
-					<div class="oneBox_body_list">
-						<div class="yd">·</div>
-						<div class="oneBox_body_list_bd"><a href="#">重庆地质大学(武汉)2018年接收推免生章程</a></div>
-					</div>
-
+					{/foreach}
+					{/if}
 				</div>
 			</div>
 			<!-- 幻灯片 -->
 			<div class="oneBox_center col-md-6">
-				<img src="/static/images/banner.png" title="#" alt="#">
+				<!-- 轮播图 -->
+				<div id="myCarousels" class="carousel slide" data-ride="carousel">
+								<!-- Indicators -->
+			            <ol class="carousel-indicators">
+			              <li data-target="#myCarousels" data-slide-to="0" class="active"></li>
+			              <li data-target="#myCarousels" data-slide-to="1"></li>
+			              <li data-target="#myCarousels" data-slide-to="2"></li>
+			              <li data-target="#myCarousels" data-slide-to="3"></li>
+			            </ol>
+					    <!-- 轮播（Carousel）项目 -->
+					    <div class="carousel-inner banner_bd" role="listbox">
+					    	{if $data.bannerData}
+								{foreach name="data.bannerData" item="v" key="k"}
+							<div {if $k == 0}class="item active"{else/}class="item"{/if}>
+					        	<div class="third_header_aside">
+					        		<a href="{$v.img_link}">
+					        			<img src="{$v.img_path}" alt="{$v.id}">
+					        		</a>
+								</div>
+					        </div>
+							{/foreach}
+							{/if}       
+					    </div>
+					    <!-- 轮播（Carousel）导航 -->
+					    <a class="left carousel-control" href="#myCarousels" data-slide="prev">  
+				            <span class="glyphicon glyphicon-chevron-left"></span>  
+				        </a>  
+				        <a class="right carousel-control" href="#myCarousels" data-slide="next">  
+				            <span class="glyphicon glyphicon-chevron-right"></span>  
+				        </a> 
+				</div>
 			</div>
 			
 		</div>
@@ -59,79 +72,36 @@
 				</div>
 				<div class="oneBox_title_img">
 					<!-- 此处为广告位置 -->
-					<img src="/static/images/activity.png">
+					{if $data.ad_foreshowData}
+					<img src="{$data.ad_foreshowData.img_path}">
+					
 					<div class="oneBox_title_img_span">
 						<div class="nearTerm">
-							<a href="#">
+							<a href="{$data.ad_foreshowData.img_link}">
 								<p>近期活动</p>
 								<p>所有活动</p>
 							</a>
 						</div>
 					</div>
-
+					{/if}
 				</div>
 				<div class="secondLeft">
+					{if $data.foreshowData}
+					{foreach name="data.foreshowData" item="v" key="k"}
 					<div class="secondLeft_list">
 						<a href="#">
 							<div class="secondLeft_list_img lt">
-								<p>九月</p>
-								<p>2日</p> 
+								<p>{$v.ctime}</p>
+								<!-- <p>2日</p>  -->
 							</div>
 							<div class="secondLeft_list_hd lt">
 								<div class="yd">·</div>
-								<div class="secondLeft_list_bd">重庆地质大学(武汉)2018年接收推免生章程</div>
+								<div class="secondLeft_list_bd">{$v.title}</div>
 							</div>
 						</a>
 					</div>
-					<div class="secondLeft_list">
-						<a href="#">
-							<div class="secondLeft_list_img lt">
-								<p>九月</p>
-								<p>2日</p> 
-							</div>
-							<div class="secondLeft_list_hd lt">
-								<div class="yd">·</div>
-								<div class="secondLeft_list_bd">重庆地质大学(武汉)2018年接收推免生章程</div>
-							</div>
-						</a>
-					</div>
-					<div class="secondLeft_list">
-						<a href="#">
-							<div class="secondLeft_list_img lt">
-								<p>九月</p>
-								<p>2日</p> 
-							</div>
-							<div class="secondLeft_list_hd lt">
-								<div class="yd">·</div>
-								<div class="secondLeft_list_bd">重庆地质大学(武汉)2018年接收推免生章程</div>
-							</div>
-						</a>
-					</div>
-					<div class="secondLeft_list">
-						<a href="#">
-							<div class="secondLeft_list_img lt">
-								<p>九月</p>
-								<p>2日</p> 
-							</div>
-							<div class="secondLeft_list_hd lt">
-								<div class="yd">·</div>
-								<div class="secondLeft_list_bd">重庆地质大学(武汉)2018年接收推免生章程</div>
-							</div>
-						</a>
-					</div>
-					<div class="secondLeft_list">
-						<a href="#">
-							<div class="secondLeft_list_img lt">
-								<p>九月</p>
-								<p>2日</p> 
-							</div>
-							<div class="secondLeft_list_hd lt">
-								<div class="yd">·</div>
-								<div class="secondLeft_list_bd">重庆地质大学(武汉)2018年接收推免生章程</div>
-							</div>
-						</a>
-					</div>
-
+					{/foreach}
+					{/if}
 				</div>
 			</div>
 			<!-- 2L中 招生质询/考试咨询 -->
@@ -144,23 +114,16 @@
 					</div>
 					<div class="oneBox_body ">
 						<div class="weui-panel__bd">
-						{if condition="($data.status == 0)"}
-                            {foreach name="data.data.programa_article"  item="v" key="k"}
-                            	{if condition="$v.type == 1"}
 							<div class="weui-media-box weui-media-box_text pad0">
 								<a href="javascript:;">
-								  	<h2 class="oneBox_body_list_title">{$v.title}</h2>
-								  	<div class="weui-media-box__desc">{$v.tips}</div>
+								  	<h2 class="oneBox_body_list_title">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学</h2>
+								  	<div class="weui-media-box__desc">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学</div>
 								</a>
 							</div>	
-							{else /}
 							<div class="oneBox_body_list">
 									<div class="yd">·</div>
-									<div class="oneBox_body_list_bd"><a href="#">{$v.title}</a></div>
+									<div class="oneBox_body_list_bd"><a href="#">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学</a></div>
 							</div>
-							{/if}
-							 {/foreach}
-                        {/if}
 						</div>
 					</div>
 				</div>
@@ -172,21 +135,16 @@
 					</div>
 					<div class="oneBox_body ">
 						<div class="weui-panel__bd">
-                            {foreach name="data.data.programa_article"  item="v" key="k"}
-                            	{if condition="$v.type == 1"}
 							<div class="weui-media-box weui-media-box_text pad0">
 								<a href="javascript:;">
-								  	<h2 class="oneBox_body_list_title">{$v.title}</h2>
-								  	<div class="weui-media-box__desc">{$v.tips}</div>
+								  	<h2 class="oneBox_body_list_title">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学</h2>
+								  	<div class="weui-media-box__desc">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学</div>
 								</a>
 							</div>	
-							{else /}
 							<div class="oneBox_body_list">
 									<div class="yd">·</div>
-									<div class="oneBox_body_list_bd"><a href="#">{$v.title}</a></div>
+									<div class="oneBox_body_list_bd"><a href="#">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学</a></div>
 							</div>
-							{/if}
-							 {/foreach}
 						</div>
 					</div>
 				</div>
@@ -229,22 +187,24 @@
 					        <div class="item active">
 					        	<div class="third_header_aside">
 									<ul>
-										{if condition="($data.status == 0)"}
-										{volist  name="data.data.ad_academy" id="v" length="6"}
-							           	<li><a href="{v.cname_link}">{$v.cname}</a></li>
-							           	{/volist}
-							           	{/if}
+										<li><a href="{v.cname_link}">重庆大学</a></li>
+							           	<li><a href="{v.cname_link}">重庆大学</a></li>
+							           	<li><a href="{v.cname_link}">重庆大学</a></li>
+							           	<li><a href="{v.cname_link}">重庆大学</a></li>
+							           	<li><a href="{v.cname_link}">重庆大学</a></li>
+							           	<li><a href="{v.cname_link}">重庆大学</a></li>
 							        </ul>
 								</div>
 					        </div>
 					        <div class="item">
 					        	<div class="third_header_aside">
 									<ul>
-							           	{if condition="($data.status == 0)"}
-										{volist  name="data.data.ad_academy" id="v" offset="6" length="6"}
-							           	<li><a href="{v.cname_link}">{$v.cname}</a></li>
-							           	{/volist}
-							           	{/if}
+										<li><a href="{v.cname_link}">重庆大学</a></li>
+										<li><a href="{v.cname_link}">重庆大学</a></li>
+										<li><a href="{v.cname_link}">重庆大学</a></li>
+										<li><a href="{v.cname_link}">重庆大学</a></li>
+										<li><a href="{v.cname_link}">重庆大学</a></li>
+										<li><a href="{v.cname_link}">重庆大学</a></li>
 							        </ul>
 								</div>
 					        </div>
@@ -270,47 +230,23 @@
 						<a href="#" class="rt">更多></a>
 				</div>
 				<div class="oneBox_body">
-					        	<!-- <div class="third_header_aside">
-									<ul>
-										{if condition="($data.status == 0)"}
-										{volist  name="data.data.ad_academy" id="v" length="6"}
-							           	<li><a href="{v.cname_link}">{$v.cname}</a></li>
-							           	{/volist}
-							           	{/if}
-							        </ul>
-								</div>
-					        </div>
-					        <div class="item">
-					        	<div class="third_header_aside">
-									<ul>
-							           	{if condition="($data.status == 0)"}
-										{volist  name="data.data.ad_academy" id="v" offset="6" length="6"}
-							           	<li><a href="{v.cname_link}">{$v.cname}</a></li>
-							           	{/volist}
-							           	{/if}
-							        </ul> -->
+	
 					<div class="oneBox_body_list_access">
-						{if condition="$data.status == 0"}
-							{foreach name="$data.data.programa_article" item="v" key="k"}
-							{if condition="$v.type == 1"}
+
 						<div class="oneBox_body">
 							<a href="#" class="weui-media-box weui-media-box_appmsg">
 							    <div class="weui-media-box__hd">
 							      <img class="weui-media-box__thumb" src="/static/images/icon_2.png">
 							    </div>
 							    <div class="weui-media-box__bd">
-							      	<p class="weui-media-box__desc">{$v.title}</p>
+							      	<p class="weui-media-box__desc">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学</p>
 							    </div>
 						    </a>
 						</div>
-						{else /}
 						<div class="oneBox_body_list">
 							<div class="yd">·</div>
-							<div class="oneBox_body_list_bd"><a href="#">{$v.title}</a></div>
+							<div class="oneBox_body_list_bd"><a href="#">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学</a></div>
 						</div>
-						{/if}
-						{/foreach}
-						{/if}
 					</div>
 				</div>
 			</div>
