--- a/public/static/index/index/css/index.css
+++ b/public/static/index/index/css/index.css
@@ -12,6 +12,8 @@ h1,h2,h3{
 .pad0{padding: 0;}
 .oneBox .oneBox_left{width: 350px;height: 264px;}
 .oneBox .oneBox_center{width: 520px;}
+.oneBox_center .banner_bd{width: 490px;height: 264px;}
+.oneBox_center .banner_bd .third_header_aside{width: 100%;height: 100%;}
 .first{width: 100%;height: 264px;}
 .oneBox .oneBox_title{width: 100%;height: 34px;line-height: 34px;font-size: 16px;font-weight: 500;border-bottom: 1px solid #ddd;}
 .oneBox .oneBox_title .oneBox_title_bd{padding-left: 10px;border-left:2px solid #1787e0;font-size: 20px;}
