--- a/application/index/view/Layouts/footer.html
+++ b/application/index/view/Layouts/footer.html
@@ -1,29 +1,20 @@
 
     <!--  底部样式开始  -->
-<div class="footer">
-    <!-- 友情链接  -->
-    <div class="row">
-        <div class="footer_link">
-            <div class="third_header">
-                    <h3 >考试咨询</h3>
+    <div class="h10"></div>
+  <div class="container">
+            <!-- 友情链接  -->
+            <div class="row">
+                <div class="footer_link">
+                    <div class="third_header">
+                            <h3>友情链接</h3>
+                        </div>
+                    {if $data.webstatData}
+                    <div class="main_footer_bottom">
+                        {$data.webstatData.content}
+                    </div>
+                    {/if}
                 </div>
-            <div class="main_footer_bottom">
-                <p>
-                    <a href="#">重庆MBA招生考试网</a>-
-                    <a href="#">中国研究生招生考试网</a>-
-                    <a href="#">重庆大学MBA教育中心</a>-
-                    <a href="#">西南大学MBA教育中心</a>-
-                    <a href="#">重庆理工大学MBA</a>-
-                    <a href="#">重庆市师范大学经济与管理学院</a>-
-                    <a href="#">四川大学商学院MBA中心</a>-
-                    <a href="#">电子科技大学经济与管理学院</a>-
-                    <a href="#">上海交通大学安泰经济与管理学院</a>-
-                    <a href="#">西安网站建设</a>
-                </p>
             </div>
-        </div>
-    </div>
-    <div class="container">
                 <!-- 底部链接 -->
         <div class="main_footer_bottom">
             <p>
