--- a/public/static/index/layouts/css/right_aside.css
+++ b/public/static/index/layouts/css/right_aside.css
@@ -25,4 +25,4 @@
 .second_QR_hd{background:url(/static/images/phone_left.png)no-repeat;color: #fff;width: 76px;height: 155px;
 	text-align: center;margin: 0 auto;}
 .second_QR_hd span{color: #fff;text-align: center;font-weight: bold;font-size: 16px;display: inline-block;padding: 3px 23px;}
-.second_phone_img{margin-left:30px; }
+.second_phone_img{margin-left:30px; width: 234px;height: 155px;}
